Refactor usages of DefaultHttpClient